@@ -1,4 +1,5 @@
 0.06
+ - Update Module::Install to 1.16 version.
  - Update copyright years.
 
 0.05 2014-11-02T12:31:33+01:00
